bundles/roboconf-core/src/test/resources/configurations/valid/instance-imbricated-3.instances
# Imbricated instances

instance of vm {
	name: vm1;	# the VM name
	
	instance of server {
		name: server;
		port: 9878;
		
		instance of web-app1 {
			name: web-app1-1;
		}
	}
}

instance of vm {

	name: vm-;	# the VM name
	count: 7;
	
	instance of server {
		name: server4osgi;
		port: 9878;
		
		instance of osgi-container {
			name: osgi-container-app;
			
			instance of bundle {
				# A bundle
				name: my-bundle;
			}
		}
	}
}
