bundles/roboconf-core/src/test/resources/configurations/invalid/instanceof-very-imbricated-invalid-end.instances
instance of wrapper {
	instance of vm {
		name: my-vm;
		instance of server {
			name: server1;
		} instance of toto {
	
		}
	}
	}